--- a/buffer-array.html
+++ b/buffer-array.html
@@ -50,7 +50,7 @@
             <dl class="message-properties">
                 <dt>payload <span class="property-type">array</span></dt>
                 <dd>the buffer array up to a given length containing a collection of payloads
-                    (added from right to left).
+                    (added from left to right).
                 </dd>
             </dl>
         </li>
