--- a/buffer-array-alt.html
+++ b/buffer-array-alt.html
@@ -31,7 +31,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="buffer-array">
+<script type="text/x-red" data-help-name="buffer-array-alt">
     <p>This node fills a circular array with payload values.</p>
     <h3>Input</h3>
     <ol class="node-ports">
